2001-05-07  Miguel Sofer  <msofer@users.sourceforge.net>

	* generic/tclInt.h
	* generic/tclNamesp.c: invalidate all bytecodes in a namespace if
	a new command shadows a bytecoded command.
	* tests/namespace.test
	Patched from [Bug: 231259] 

2001-05-15  Donal K. Fellows  <fellowsd@cs.man.ac.uk>

	* doc/console.n: Created.  It seems very odd to me that the
	console implementation is part of the Tcl distribution and not
	part of Tk, but given the location of the source, the
	documentation must obviously match up...

2001-05-14  Donal K. Fellows  <fellowsd@cs.man.ac.uk>

	* generic/tclCmdMZ.c (Tcl_StringObjCmd): 
	* tests/string.test (string-4.14): Negative string indices should
	not be added as offsets to the result of [string first] but
	instead be treated as referring to the start of the string.
	[Bug: 423581]

2001-05-11  Mo DeJong  <mdejong@redhat.com>

	* unix/Makefile.in: Add a LDFLAGS variable to the
	Makefile instead of directly substing @LDFLAGS@.
	* unix/configure: Regen.
	* unix/tcl.m4: Fix CFLAGS_DEFAULT so that the name
	of a Makefile variable is passed as @CFLAGS@.
	* win/Makefile.in: Move the setting of CFLAGS
	higher up in the Makefile.
	* win/configure: Regen.
	* win/configure.in: Use dnl to comment out macros
	so that they are not accidently expanded.
	* win/tcl.m4: Fix CFLAGS_DEFAULT so that the name
	of a Makefile variable is passed as @CFLAGS@.

2001-05-07  Miguel Sofer  <msofer@users.sourceforge.net>

	* generic/tclExecute.c: insure different rand() seeds in different
	threads [Bug 416643]

2001-05-03  Jeff Hobbs  <jeffh@ActiveState.com>

	* tests/tcltest.test: removed extraneous 'c' (doh!) [Bug: 414031]

	* tools/tcltk-man2html.tcl: removed use of 'exec' for portability
	and fixed up code.

2001-05-03  Don Porter  <dgp@users.sourceforge.net>

	* doc/library.n:
	* library/init.tcl:
	* tests/autoMkindex.test: Modified [auto_import] to apply
	pattern matching in the [namespace import] style.  [Bug 420186]