@@ -1,5 +1,9 @@
 2001-05-07  Miguel Sofer  <msofer@users.sourceforge.net>
 
+	* tests/lindex.test: added test for nested braces [Patch: 423617]
+
+2001-05-07  Miguel Sofer  <msofer@users.sourceforge.net>
+
 	* generic/tclInt.h
 	* generic/tclNamesp.c: invalidate all bytecodes in a namespace if
 	a new command shadows a bytecoded command.
